--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -1,10 +1,17 @@
+@import "@styles/settings/__settings";
+
 .button {
     font-size: 1em;
-    font-weight: bold;
+    font-family: $font-family-display;
+    font-weight: $font-weight-display-bold;
     text-transform: uppercase;
     padding: 0.6em 1em;
     color: white;
-    background-color: black;
+    background-color: $c-brand-pink;
     border: none;
     cursor: pointer;
+
+    &[data-color="yellow"] {
+        background-color: $c-brand-yellow;
+    }
 }
