--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -1,20 +1,17 @@
-$color-link: blueviolet;
+@import "@styles/util/__util";
+@import "@styles/settings/__settings";
 
-.footer {
-    width: 100%;
-    height: 100px;
-    border-top: 1px solid #eaeaea;
+.discover {
     display: flex;
-    justify-content: center;
     align-items: center;
+    justify-content: space-between;
 }
 
 .products {
     list-style: none;
     padding: 0;
-    margin: 3em 0 0;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     grid-gap: 3em;
 }
 
@@ -25,4 +22,16 @@ $color-link: blueviolet;
 
 .productPrice {
     margin: 0.4em 0 0;
+}
+
+.productImage {
+    @extend %card-image;
+
+    &>div {
+        display: block !important;
+    }
+}
+
+.bandIsActive {
+    border: 2px solid $c-brand-pink;
 }
