--- a/src/styles/Product.module.scss
+++ b/src/styles/Product.module.scss
@@ -1,19 +1,11 @@
-$color-link: blueviolet;
-
-.footer {
-    width: 100%;
-    height: 100px;
-    border-top: 1px solid #eaeaea;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
+@import "@styles/util/__util";
 
 .productWrapper {
     display: flex;
 }
 
 .productImage {
+    @extend %card-image;
     width: 50%;
     margin-right: 2em;
 }
